fixed body not occupying full width on mobile devices

--- a/public/styles.css
+++ b/public/styles.css
@@ -13,6 +13,7 @@ button {
 body {
   font-family: 'Rubik', Courier, monospace;
   color: black;
+  overflow-x: hidden;
 }
 
 #skills-header, #projects-header, #contact-header{
